# genesis-rs

./: Cargo.toml
src/: main.rs
src/game/: mod.rs
src/game/components/: gene.rs  mod.rs  organism.rs  tags.rs
src/game/components/organisms/: macro_organism.rs  micro_organaism.rs  mod.rs
src/game/events/: mod.rs  new_organism.rs
src/game/plugins/: cam.rs  camera_control.rs  event_handler.rs  evt.rs  mod.rs  state_transition.rs
src/game/ui/: main_menu.rs  mod.rs
src/utils/: math.rs
