[package]
name = "genesis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-inspector-egui = "0.18.1"
bevy_egui = "0.20"
bevy_prototype_lyon = "0.8.0"
bevy_ecs_tilemap = "0.9.0"
bevy_tweening = "0.7"
rand = "0.8.5"

[dependencies.bevy]
version = "0.10"
default-features = false
features = [
    "bevy_asset", # load assets
    "bevy_audio", # audio
    "bevy_core_pipeline", # core pipeline
    "bevy_render", # render
    "bevy_scene", # scene management
    "bevy_sprite", # sprite
    "bevy_winit", # window management
    "filesystem_watcher", # watch asset file change
    "png", # png file format
    "x11", # x11 display system
    "vorbis", # ogg audio file
    "mp3", # mp3 audio file
    "serialize", # serde serialization
    "wayland", # wayland display system
    "wav", # wav audio file

    # dynamic linking for faster compilation in dev env
    "dynamic_linking"
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
